更改配置文件,不要暴露个人信息

--- a/conf/config.toml
+++ b/conf/config.toml
@@ -2,12 +2,12 @@ Program = "mysql-gin-restful"
 
 [mysql]
 
-ip = "47.95.1.229"
+ip = "localhost"
 
 port = "3306"
 
-username = "mysql_nj_jay_com"
+username = "root"
 
-password = "6435426njnj"
+password = "root"
 
-database = "mysql_nj_jay_com"
+database = "bookmanage"
